Add second topic

--- a/producer/src/main/resources/application.properties
+++ b/producer/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8002
+auto.create.topics.enable=true
 spring.kafka.producer.bootstrap-servers=localhost:9092
 #spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 #spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.LongSerializer
