--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8001
 spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.producer.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=app.1
 #spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 #spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.LongDeserializer
